// Copyright Â© 2018 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/TheThingsNetwork/ttn/api/application.proto";
import "github.com/TheThingsNetwork/ttn/api/identifiers.proto";
import "github.com/TheThingsNetwork/ttn/api/messages.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

package ttn.lorawan.v3;

option go_package = "github.com/TheThingsNetwork/ttn/pkg/ttnpb";

// The GsNs service connects a gateway server to a network server.
service GsNs {
  rpc StartServingGateway(GatewayIdentifiers) returns (google.protobuf.Empty);
  rpc StopServingGateway(GatewayIdentifiers) returns (google.protobuf.Empty);
  rpc HandleUplink(UplinkMessage) returns (google.protobuf.Empty);
}

// The AsNs service connects an application server to a network server.
service AsNs {
  rpc LinkApplication(ApplicationIdentifiers) returns (stream ApplicationUp);
}
